--- a/assets/scss/_main-custom.scss
+++ b/assets/scss/_main-custom.scss
@@ -212,7 +212,8 @@ p.link-anim:focus {
 			top:220px;
 		}
 		#portfimg-mils {
-			margin-left:-40px;
+			max-width:90vw;
+			// margin:10px;
 		}
 		#portfimg-busters {
 			margin-right:-20px;
