--- a/assets/scss/_portfolio-pages.scss
+++ b/assets/scss/_portfolio-pages.scss
@@ -7,7 +7,7 @@
 	// Mil's Diner Page
 	section#milsdiner-content {
 		h2#milsdiner-title {
-			@media screen and (max-width:400px) {
+			@media screen and (max-width:450px) {
 				font-size:2.4rem;
 				letter-spacing: 0.2rem;
 			}
